syntax = "proto3";

package user;

service UserService {
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
}

message GetUsersRequest {}

message GetUsersResponse {
    repeated string users = 1;
}
